--- a/themes.Rmd
+++ b/themes.Rmd
@@ -42,3 +42,47 @@ gf_point(mpg~disp, data = mtcars) %>%
 # All ggplot themes
 
 Here is a [list](https://ggplot2.tidyverse.org/reference/ggtheme.html) of all themes available and a preview of what they look like.
+
+```{r}
+require(gridExtra)
+
+gray = gf_point(mpg~disp, data = mtcars) %>%
+  gf_theme(theme_gray()) %>%
+  gf_labs(title = "theme_gray")
+
+bw = gf_point(mpg~disp, data = mtcars) %>%
+  gf_theme(theme_bw()) %>%
+  gf_labs(title = "theme_bw")
+
+linedraw = gf_point(mpg~disp, data = mtcars) %>%
+  gf_theme(theme_linedraw()) %>%
+  gf_labs(title = "theme_linedraw")
+
+light = gf_point(mpg~disp, data = mtcars) %>%
+  gf_theme(theme_light()) %>%
+  gf_labs(title = "theme_light")
+
+dark = gf_point(mpg~disp, data = mtcars) %>%
+  gf_theme(theme_dark()) %>%
+  gf_labs(title = "theme_dark")
+
+minimal = gf_point(mpg~disp, data = mtcars) %>%
+  gf_theme(theme_minimal()) %>%
+  gf_labs(title = "theme_minimal")
+
+classic = gf_point(mpg~disp, data = mtcars) %>%
+  gf_theme(theme_classic()) %>%
+  gf_labs(title = "theme_classic")
+
+void = gf_point(mpg~disp, data = mtcars) %>%
+  gf_theme(theme_void()) %>%
+  gf_labs(title = "theme_void")
+
+test = gf_point(mpg~disp, data = mtcars) %>%
+  gf_theme(theme_test()) %>%
+  gf_labs(title = "theme_test")
+
+
+grid.arrange(gray, bw, linedraw, light, dark, minimal, classic, void, test, nrow = 3 )
+```
+
