--- a/index.Rmd
+++ b/index.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Refining a Visualization"
+title: "Data Visualization"
 output: 
   html_document:
     toc: TRUE
@@ -12,7 +12,7 @@ output:
 
 # Welcome!
 
-This is a collection of tips/tricks I have accumulated over the last several years exploring visualizations. Please let me know if something is not working or if I should add something! Always looking to improve this collection.
+This is meant to be a collection of tips and tricks I have accumulated over years exploring visualizations. Please let me know if something is not working or if I should add something! Always looking to improve this collection.
 
 # Preamble
 
