--- a/subsets.Rmd
+++ b/subsets.Rmd
@@ -19,11 +19,15 @@ Sometimes you want to adjust the data you see by only graphing a subset of your 
 
 # Subsetting Continuous Data
 
+In order to subset continuous data, create a numerical equation (e.g. X < 5) for the values you want.  
+
 **Single variable equal to a number:** subset(DatasetName, Age == 10)
 
 **Single variable in relation to a number:** subset(DatasetName, Age \< 10)
 
 **Single variable between 2 values:** subset(DatasetName, Age \> 3 & Age \< 10)
+
+**Excluding a range of values:** subset(DatasetName, !(Age \< 10))
 
 ```{r}
 theme_set(theme_minimal())
@@ -46,44 +50,48 @@ gf_point(hwy~displ, data = subset(mpg, displ > 3 & displ < 6), alpha = 0.5) %>%
 
 # Subsetting Cateogrical (Discrete) Data
 
+In order to subset categorical data, you'll want to specify certain categories.  
+
+**Single category:** variable == "Category Name"
+
+**Multiple categories:** variable %in% c("Item 1", "Item 2", "Item 3")
+
+**EXcluding categories:** variable != "Category Name"
+
 ```{r}
 gf_point(hwy~displ, data = subset(mpg, class == "compact"), color = ~manufacturer, show.legend = FALSE) %>%
   gf_facet_wrap(~manufacturer) %>%
-  gf_labs(title = "Facet Wrap")
+  gf_labs(title = "Choose Single Category")
+
+gf_point(hwy~displ, data = subset(mpg, manufacturer %in% c("audi", "toyota", "volkswagen")), color = ~manufacturer, show.legend = FALSE) %>%
+  gf_facet_wrap(~manufacturer) %>%
+  gf_labs(title = "Choose in List of Categories")
+
+gf_point(hwy~displ, data = subset(mpg, class != "compact"), color = ~manufacturer, show.legend = FALSE) %>%
+  gf_facet_wrap(~manufacturer) %>%
+  gf_labs(title = "Excluding a Category")
 ```
 
 
 
 # Multiple Subsets
 
-AND: subset(DatasetName, year == 1999 & class == "compact")
+**Specifying options for 2 variables (AND):** subset(DatasetName, year == 1999 & class == "compact")
 
-OR: subset(DatasetName, year == 1999 | class == "compact")
-
-List:  subset(DatasetName, manufacturer %in% c("audi", "chevrolet", "dodge"))
-
-## Multiple Subsets: AND
+**Specifying options for 2 variables (AND):** subset(DatasetName, year == 1999 | class == "compact")
 
 ```{r}
 gf_point(hwy~displ, data = subset(mpg, year == 1999 & class == "compact"), color = ~manufacturer, show.legend = FALSE) %>%
   gf_facet_wrap(~manufacturer) %>%
-  gf_labs(title = "Facet Wrap: AND")
+  gf_labs(title = "Multiple Subsets: AND")
 
 ```
 
-## Multiple Subsets: OR
 
 ```{r}
 gf_point(hwy~displ, data = subset(mpg, year == 1999 | class == "compact"), color = ~manufacturer, show.legend = FALSE) %>%
   gf_facet_wrap(~manufacturer) %>%
-  gf_labs(title = "Facet Wrap: OR")
+  gf_labs(title = "Multiple Subsets: OR")
 ```
 
-## Multiple Subsets: List
-
-```{r}
-gf_point(hwy~displ, data = subset(mpg, manufacturer %in% c("audi", "chevrolet", "dodge")), color = ~manufacturer, show.legend = FALSE) %>%
-  gf_facet_wrap(~manufacturer) %>%
-  gf_labs(title = "Facet Wrap: List")
-```
 
